Actualizado texto del footer.

--- a/views/layout.html
+++ b/views/layout.html
@@ -98,9 +98,8 @@
     <footer class="footer footer-style">
       <div class="container-fluid">
         <div class="col-xs-offset-1">
-             Edificio Ciencias Básicas 1, Piso 1, ofic 135. Sartenejas, Baruta, Edo. Miranda
-              - Apartado 89000 Calle Unibolivar - Caracas Venezuela. <br>
-              Teléfono: +58 0212-9063378. Correo: coord-ccc@usb.ve Twitter: @usbpasantias
+            Sede Sartenejas. Baruta, Edo. Miranda - Apartado 89000 - Calle Unibolívar - Caracas, Venezuela. Teléfono +58 0212-9063111 <br>
+            Sede Litoral. Camurí Grande, Edo. Vargas Parroquia Naiguatá. Teléfono +25 0212-9069000
         </div>
         <div class="copyright pull-right">{{=T('Copyright')}} &#169; {{=request.now.year}}. &nbsp;</div>
       </div>
