--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -4,6 +4,7 @@
 {{if 'message' in globals():}}
 <h2>{{=message}}</h2>
 <p> Aqui va la vista para el perfil. </p>
+<p><b> carnet: </b> {{=usuario['username']}}</p>
 {{elif 'content' in globals():}}
 {{=content}}
 {{else:}}
