--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -2,9 +2,11 @@
 {{extend 'layout.html'}}
 
 {{if 'message' in globals():}}
-<h2>{{=message}}</h2>
+<h2> {{=message}}</h2>
 <p> Aqui va la vista para el perfil. </p>
-<p><b> carnet: </b> {{=usuario['username']}}</p>
+
+
+{{=form}}
 {{elif 'content' in globals():}}
 {{=content}}
 {{else:}}
