--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -3,8 +3,8 @@
 
 {{if 'message' in globals():}}
 <h2> {{=message}}</h2>
-<p> Aqui va la vista para el perfil. </p>
-
+<p> Usted puede actualizar sus nombres, appellidos y número de teléfono. Si encuentra otros de sus datos personales erróneos por favor
+contacte al adiminstrador.</p>
 
 {{=form}}
 {{elif 'content' in globals():}}
