--- a/static/css/sigpae.css
+++ b/static/css/sigpae.css
@@ -75,3 +75,18 @@ body {
 .main-container h2 {
   margin: 2% 0;
 }
+
+/*FORMS*/
+
+.form-horizontal {
+  width: 40%;
+  margin: 2% auto;
+}
+
+.form-horizontal input{
+  width: 100%;
+  height: 30px;
+  border-radius: 3px;
+  margin: 1%;
+  padding: 1%
+}
