Vista de edicion de usuarios y roles. Se pueden agregar roles nuevos y eliminar. Falta Modificar los existentes.

--- a/static/css/sigpae.css
+++ b/static/css/sigpae.css
@@ -91,6 +91,11 @@ body {
   padding: 1%
 }
 
+.edit-user .form-horizontal {
+  width: 100%;
+  margin: 2% auto;
+}
+
 /* Tablas */
 
 tbody tr td i {
