--- a/views/default/banned.html
+++ b/views/default/banned.html
@@ -6,7 +6,7 @@
 
 {{if 'message' in globals():}}
 <h2>{{=message}}</h2>
-<p> Disculpe. Usted no tiene los privilegios suficientes para ingresar a esta área del sistema. </p>
+<p> Disculpe. Su usuario ha sido bloqueado del sistema SIGPAE.</p>
 <p> Si cree que se trata de un error póngase en contacto con su Coordinación, Departamento o
     la Dirección de Admisión y Control de Estudios.
 </p>
