--- a/static/css/sigpae.css
+++ b/static/css/sigpae.css
@@ -103,3 +103,22 @@ thead tr th,
 tbody tr td {
   text-align: center;
 }
+
+/* Búsqueda Publica*/
+
+.public-search {
+  display: block;
+  width: 50%;
+  text-align: left;
+  margin: 10vh auto;
+}
+
+.public-search form input[type=text] {
+    width: 80%;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+.public-search form input[type=text]:focus {
+    width: 100%;
+}
