Cambios en el Index.html

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -13,7 +13,7 @@
 {{pass}}
 
 
-<div class="public-search">
+<div class="public-search col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
   <h3>Búsquedas Públicas</h3>
   <form>
     <div class="input-group margin-bottom-sm">
