--- a/static/css/sigpae.css
+++ b/static/css/sigpae.css
@@ -108,13 +108,12 @@ tbody tr td {
 
 .public-search {
   display: block;
-  width: 50%;
   text-align: left;
-  margin: 10vh auto;
+  margin-top: 10vh;
 }
 
 .public-search form input[type=text] {
-    width: 80%;
+    width: 70%;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
