--- a/static/css/sigpae.css
+++ b/static/css/sigpae.css
@@ -121,3 +121,30 @@ tbody tr td {
 .public-search form input[type=text]:focus {
     width: 100%;
 }
+
+.h-scroll {
+  height: 35vh;
+  position: static;
+  overflow-y: scroll;
+  margin-bottom: 1vh;
+}
+
+.pdf-display {
+  width: 100%;
+  height: 80vh;
+}
+
+.transcription-tag {
+  width: 100%;
+  background-color: #F3F3F3;
+  height: 30px;
+  margin-bottom: 10px;
+  text-align: center;
+  padding-top: 5px;
+}
+
+.transcription-buttons {
+    float: right;
+    margin-top: 2vh;
+    margin-bottom: 0;
+}
