--- a/views/layout_transcripcion.html
+++ b/views/layout_transcripcion.html
@@ -35,7 +35,7 @@
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
     <div class="w2p_flash alert alert-dismissable">{{=response.flash or ''}}</div>
     <!-- Navbar ======================================= -->
-    <nav class="navbar-default navbar-style sigpae-navbar" role="navigation">
+    <nav class="navbar-default navbar-style sigpae-navbar-transcription" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
             <button type = "button" class = "navbar-toggle collapsed"
@@ -63,7 +63,7 @@
     <!-- Main ========================================= -->
     <!-- Begin page content -->
 
-    <div id="main" class="container-fluid main-container">
+    <div id="main" class="container-fluid main-container-transcription">
       {{block center}}
       {{include}}
       {{end}}
