--- a/static/css/sigpae.css
+++ b/static/css/sigpae.css
@@ -31,6 +31,14 @@ body {
   border-radius: 5px;
 }
 
+.sigpae-navbar-transcription {
+  max-width: 95%;
+  display: block;
+  margin: 1% auto;
+  background-color: #F3F3F3;
+  border-radius: 5px;
+}
+
 .navbar-default .navbar-nav > li > a {
     color: #3E3E3E;
     font-size: 15px;
@@ -63,10 +71,32 @@ body {
   right: 0;
 }
 
+/* ALERTS */
+
+div.w2p_flash.alert {
+    display: none;
+    position: fixed;
+    top: 70px;
+    right: 2.5%;
+    cursor: pointer;
+    z-index: 1000;
+    background-color: #e67e22;
+    border: 1px solid #d35400;
+    border-left: 5px solid #d35400;
+    color: white;
+    opacity: 1 !important;
+}
+
 /* MAIN CONTAINER ELEMENTS */
 
 .main-container {
   max-width: 80%;
+  display: block;
+  margin: 0 auto;
+}
+
+.main-container-transcription {
+  max-width: 95%;
   display: block;
   margin: 0 auto;
 }
@@ -126,6 +156,7 @@ tbody tr td {
   height: 35vh;
   position: static;
   overflow-y: scroll;
+  overflow-x: hidden;
   margin-bottom: 1vh;
 }
 
@@ -143,8 +174,54 @@ tbody tr td {
   padding-top: 5px;
 }
 
+.field-tag {
+  width: 100%;
+  background-color: #F3F3F3;
+  height: 30px;
+  margin: 2px;
+  padding: 2px;
+  text-align: left;
+}
+
+.field-tag-wide {
+  width: 100%;
+  background-color: #F3F3F3;
+  margin-bottom: 10px;
+  text-align: center;
+  padding-top: 5px;
+  display: block;
+}
+
+.field-tag-wide textarea {
+  width: 100%;
+  height: 25vh;
+  margin: 5px 0;
+  border: 2px solid #f3f3f3;
+}
+
+.field-tag input,
+.field-tag select {
+  width: 60%;
+  float: right;
+  height: 26px;
+  padding: 0 5px;
+  border: 1px solid #f3f3f3;
+}
+
 .transcription-buttons {
     float: right;
     margin-top: 2vh;
     margin-bottom: 0;
+}
+
+.red {
+  color: #e74c3c;
+}
+
+.green {
+  color: #2ecc71;
+}
+
+.blue {
+  color: #3498db;
 }
