--- a/views/users/manage.html
+++ b/views/users/manage.html
@@ -23,7 +23,7 @@
          <td>{{=usuario['name']}}</td>
          <td>{{=usuario['roles']}}</td>
          <td>{{=usuario['email']}}</td>
-         <td><a href="{{=URL(c='users',f='edit',args=[usuario['id']])}}"<i class="fa fa-pencil-square-o" aria-hidden="true"></i></td>
+         <td><a href="{{=URL(c='users',f='edit',args=[usuario['id']])}}"<i class="fa fa-pencil-square-o blue" aria-hidden="true"></i></td>
        </tr>
       {{pass}}
    </tbody>
