Cambiado usuario BLOQUEADO a inactivo. Menu para usuarios inactivos agregado.

--- a/views/default/inactive.html
+++ b/views/default/inactive.html
@@ -6,7 +6,7 @@
 
 {{if 'message' in globals():}}
 <h2>{{=message}}</h2>
-<p> Disculpe. Su usuario ha sido bloqueado del sistema SIGPAE.</p>
+<p> Disculpe. Su usuario ha sido marcado como Inactivo dentro del sistema SIGPAE.</p>
 <p> Si cree que se trata de un error póngase en contacto con su Coordinación, Departamento o
     la Dirección de Admisión y Control de Estudios.
 </p>
