--- a/static/css/sigpae.css
+++ b/static/css/sigpae.css
@@ -234,3 +234,13 @@ tbody tr td {
 .help-list > li {
   list-style-type: none;
 }
+
+.block-info {
+  border: 1px solid #3498db;
+  background-color: white;
+  padding: 20px;
+  font-style: italic;
+  border-left: 5px solid #3498db;
+  border-radius: 10px;
+  margin: 20px;
+}
