--- a/views/users/edit.html
+++ b/views/users/edit.html
@@ -58,7 +58,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <center><h4 class="modal-title"> Cambiar Rol</h4><center>
       </div>
-      <div class="modal-body" data-error-cambiar="{{=error_cambiar}}">
+      <div class="modal-body">
           <p>{{ = formulario_cambiar_rol }}</p>
       </div>
     </div>
